force-app/main/default/objects/ULBC_Webhook_Log__c/ULBC_Webhook_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail for inbound Stripe webhooks. Phase 5A.2. One row per POST received, including signature failures. Decision 5.9 (metadata contract), Decision 5.11 (signature verification). Idempotency enforced by Unique constraint on ULBC_Stripe_Event_ID__c.</description>
    <label>ULBC Webhook Log</label>
    <nameField>
        <displayFormat>WHL-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULBC Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>