force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Error_Message__c</fullName>
    <description>Detail when Status is not Verified — e.g. signature mismatch reason, JSON parse error, missing field. Plain text only, no stack traces with secrets.</description>
    <label>Error Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>