force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Payload_Truncated__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Payload_Truncated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the original request body exceeded 131,072 characters and was truncated before storage in ULBC_Raw_Payload__c.</description>
    <label>Payload Truncated</label>
    <type>Checkbox</type>
</CustomField>