force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Processed_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Processed_At__c</fullName>
    <description>When the webhook was processed by Salesforce (server time, UTC). Distinct from Stripe Timestamp (when Stripe signed it) — the difference is network + Salesforce queue latency.</description>
    <label>Processed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>