force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Raw_Payload__c</fullName>
    <description>Full request body as received from Stripe. Capped at 131,072 characters (Salesforce LTA max). If exceeded, ULBC_Payload_Truncated__c is set true and only the leading 131,072 chars are stored. Stripe payloads are typically 2–8 KB so truncation is rare. Decision 5.17.</description>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>