force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Signature_Header__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Signature_Header__c</fullName>
    <description>Raw Stripe-Signature header value as received. Recorded for forensic review when signature verification fails.</description>
    <label>Signature Header</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>