force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Status__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Status__c</fullName>
    <description>Outcome of webhook processing.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Signature Invalid</fullName>
            </value>
            <value>
                <fullName>Signature Expired</fullName>
            </value>
            <value>
                <fullName>Signature Missing</fullName>
            </value>
            <value>
                <fullName>Malformed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>