force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Stripe_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Event_ID__c</fullName>
    <description>Stripe event.id from the payload (e.g. evt_1Ab2Cd3Ef4Gh5Ij6Kl7Mn). Unique + External ID enforces idempotency at the database layer — Stripe webhook retries cannot create duplicate log rows. Blank when payload is malformed and ID cannot be parsed.</description>
    <externalId>true</externalId>
    <label>Stripe Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>