force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Stripe_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Event_Type__c</fullName>
    <description>e.g. checkout.session.completed, charge.refunded. Parsed from event.type. Blank if payload malformed.</description>
    <label>Stripe Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>