force-app/main/default/objects/ULBC_Webhook_Log__c/fields/ULBC_Stripe_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Timestamp__c</fullName>
    <description>The t= component of the Stripe-Signature header, parsed as a DateTime (UTC). Used to enforce the 5-minute replay-protection window.</description>
    <label>Stripe Timestamp</label>
    <type>DateTime</type>
</CustomField>