force-app/main/default/objects/ULBC_Webhook_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ULBC_Status__c</columns>
    <columns>ULBC_Stripe_Event_Type__c</columns>
    <columns>ULBC_Stripe_Event_ID__c</columns>
    <columns>ULBC_Processed_At__c</columns>
    <columns>ULBC_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Webhook Logs</label>
</ListView>