force-app/main/default/objects/ULBC_Webhook_Log__c/listViews/Last_24_Hours.listView-meta.xml
<ListView>
    <fullName>Last_24_Hours</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ULBC_Processed_At__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Last 24 Hours</label>
</ListView>